feat: new version

--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="lo" dir="ltr" itemscope itemtype="http://schema.org/Article">
   <head>
-    <title>ໂຄມາໂຢ</title>
+    <title>ເກມ ໂຊກິ ຂອງ ມານ ໄດ້</title>
     <meta charset="UTF-8">
     <link rel="manifest" href="manifest.json">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ Komayō, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
     <meta name="keywords" content="ເລື່ອງຜີ, ໂຄມາໂຢ, obake, ōgi, ໂຊກິ, yōkai, yūrei">
-    <meta property="og:title" content="ໂຄມາໂຢ">
+    <meta name="author" content="Cyril Veltin">
+    <meta property="og:title" content="ເກມ ໂຊກິ ຂອງ ມານ ໄດ້">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://lo.komayo.page/">
-    <meta property="og:image" content="https://lo.komayo.page/img/komayo-in-ogi-game-with-victim.webp">
+    <meta property="og:image" content="https://lo.komayo.page/komayo-nyim-hai-sadtu-nonlab.webp">
     <meta property="og:description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ Komayō, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
-    <meta itemprop="name" content="ໂຄມາໂຢ">
+    <meta property="og:article:author" content="Cyril Veltin">
+    <meta itemprop="name" content="ເກມ ໂຊກິ ຂອງ ມານ ໄດ້">
+    <meta itemprop="author" content="Cyril Veltin">
     <meta itemprop="description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ Komayō, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
-    <meta itemprop="image" content="https://lo.komayo.page/img/komayo-in-ogi-game-with-victim.webp">
+    <meta itemprop="image" content="https://lo.komayo.page/komayo-nyim-hai-sadtu-nonlab.webp">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="ໂຄມາໂຢ">
+    <meta name="twitter:title" content="ເກມ ໂຊກິ ຂອງ ມານ ໄດ້">
     <meta name="twitter:description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ Komayō, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
-    <meta name="twitter:image" content="https://lo.komayo.page/img/komayo-in-ogi-game-with-victim.webp">
+    <meta name="twitter:image" content="https://lo.komayo.page/komayo-nyim-hai-sadtu-nonlab.webp">
       <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/">
       <link rel="alternate" hreflang="en" href="https://en.komayo.page/">
       <link rel="alternate" hreflang="fa" href="https://fa.komayo.page/">
@@ -51,27 +54,8 @@
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#fff">
     <meta name="theme-color" content="#fff">
-    <style>
-      main article figure {
-        margin: 0;
-        padding: 0;
-      }
-
-      main article figure img {
-        border-radius: 1em;
-        max-width: 100%;
-        height: auto;
-      }
-
-      main article strong {
-        font-weight: normal;
-      }
-
-      main article em,
-      main article dfn {
-        font-style: normal;
-      }
-    </style>
+    <meta name="robots" content="index, follow">
+    <link rel="stylesheet" href="css/pico.classless.min.css">
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -81,39 +65,55 @@
           "@id": "https://lo.komayo.page/"
         },
         "inLanguage": "lo",
-        "headline": "ໂຄມາໂຢ",
+        "headline": "ເກມ ໂຊກິ ຂອງ ມານ ໄດ້",
         "description": "ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ Komayō, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.",
-        "image": "https://lo.komayo.page/img/komayo-in-ogi-game-with-victim.webp",
+        "image": "https://lo.komayo.page/komayo-nyim-hai-sadtu-nonlab.webp",
         "datePublished": "2023-06-26",
-        "dateModified": "2023-06-30",
+        "dateModified": "2023-06-26",
+        "author": {
+          "@type": "Person",
+          "name": "Cyril Veltin"
+        },
         "keywords": "ເລື່ອງຜີ, ໂຄມາໂຢ, obake, ōgi, ໂຊກິ, yōkai, yūrei"
       }
     </script>
+    <style>
+      p {
+        text-align: justify;
+      }
+    </style>
   </head>
   <body>
     <main>
-      <h1>ໂຄມາໂຢ</h1>
+      <nav>
+  <ul>
+      <li><strong><ruby lang="ja">駒妖<rt lang="lo">ໂຄມາໂຢ</rt></ruby></strong></li>
+  </ul>
+  <ul>
+    <li><a href="#" aria-current="page">ນິທານຕົວເມືອງ</a></li>
+  </ul>
+</nav>
 <article>
   <header>
-    <h2>ເກມທີ່ຍັງບໍ່ທັນສໍາເລັດ</h2>
+    <h1>ເກມ ໂຊກິ ຂອງ ມານ ໄດ້</h1>
     <p>ມີ​ການ​ເວົ້າ​ວ່າ​ໃນ​ປະ​ເທດ​ຍີ່​ປຸ່ນ​, ໃນ​ພາກ​ພື້ນ Kansai​, ໃນ​ເວ​ລາ​ທີ່​ພຣະ​ຈັນ​ເຕັມ​ດວງ​ສ່ອງ​ສູງ​ໃນ​ທ້ອງ​ຟ້າ​, <strong>ມີ​ສັດ​ທີ່​ມີ​ສະ​ເໜ່​ທີ່​ມີ​ສະ​ເໜ່</strong> ໄດ້​ປະກົດ​ຂຶ້ນ​ເພື່ອ​ດຶງ​ດູດ​ຜູ້​ທີ່​ຫຼົງ​ທາງ​ໄປ​ມາ.</p>
 
   </header>
-  <h3>ການລໍ້ລວງຂອງເກມອັນຕະລາຍ</h3>
   <p>ງາມແລະລຶກລັບ, <em>Komayō ຊັກຈູງຜູ້ໂຊກຮ້າຍ</em>ດ້ວຍການລໍ້ລວງທີ່ບໍ່ສາມາດຕ້ານທານໄດ້. ຈາກນັ້ນ ນາງໄດ້ສະເໜີເກມ <dfn title="ເກມຂອງກະສັດ">ōgi</dfn> ໃຫ້ເຂົາເຈົ້າ, ເຊິ່ງເປັນ<em title="ໂຊກິ">ໝາກຮຸກພື້ນເມືອງຂອງຍີ່ປຸ່ນ</em>. ຜູ້​ທີ່​ຍອມ​ຮັບ​ຄຳ​ເຊື້ອ​ເຊີນ​ຂອງ​ນາງ​ບໍ່​ດົນ​ກໍ​ເຫັນ​ວ່າ​ຕົນ​ເອງ​ຕົກ​ຢູ່​ໃນ​ການ​ຫຼິ້ນ​ທີ່​ໜ້າ​ຕື່ນ​ເຕັ້ນ.</p>
 
-  <figure>
-    <img src="img/komayo-in-ogi-game-with-victim.webp" alt="Komayō, yōkai, ແມ່ນສະແດງໃຫ້ເຫັນໃນລະຫວ່າງການເກມຂອງōgi. ຢູ່ຂ້າງຂອງນາງ, ຜູ້ເຄາະຮ້າຍທີ່ຫມົດກໍາລັງຂອງນາງສາມາດເຫັນໄດ້." height="1024" width="1024">
-    <figcaption>ຢ່າງໃດກໍຕາມ, ໃນຂະນະທີ່ເກມຍັງສືບຕໍ່, ພວກເຂົາເລີ່ມຮູ້ສຶກເມື່ອຍລ້າທີ່ຄ່ອຍໆເຂົ້າໄປໃນກະດູກຂອງພວກເຂົາ, ໃນທີ່ສຸດກໍ່ບັງຄັບໃຫ້ພວກເຂົາລົ້ມລົງດ້ວຍການນອນທີ່ບໍ່ສາມາດຫຼີກລ່ຽງໄດ້.</figcaption>
-  </figure>
-  <h3>ກັບດັກຂອງ Komayō</h3>
+  <picture>
+    <source type="image/webp" srcset="komayo-nyim-hai-sadtu-nonlab.webp">
+    <source type="image/png" srcset="komayo-nyim-hai-sadtu-nonlab.png">
+    <img
+      alt="Komayō, yōkai, ແມ່ນສະແດງໃຫ້ເຫັນໃນລະຫວ່າງການເກມຂອງōgi. ຢູ່ຂ້າງຂອງນາງ, ຜູ້ເຄາະຮ້າຍທີ່ຫມົດກໍາລັງຂອງນາງສາມາດເຫັນໄດ້."
+      src="komayo-nyim-hai-sadtu-nonlab.png"
+      height="1024"
+      width="1024" />
+  </picture>
+  <p>ຢ່າງໃດກໍຕາມ, ໃນຂະນະທີ່ເກມຍັງສືບຕໍ່, ພວກເຂົາເລີ່ມຮູ້ສຶກເມື່ອຍລ້າທີ່ຄ່ອຍໆເຂົ້າໄປໃນກະດູກຂອງພວກເຂົາ, ໃນທີ່ສຸດກໍ່ບັງຄັບໃຫ້ພວກເຂົາລົ້ມລົງດ້ວຍການນອນທີ່ບໍ່ສາມາດຫຼີກລ່ຽງໄດ້.</p>
+
   <p>ມັນແມ່ນໃນລະຫວ່າງການນອນຫລັບນີ້ທີ່ Komayō ເປີດເຜີຍລັກສະນະທີ່ແທ້ຈິງຂອງນາງ. ນາງໄດ້ດູດເອົາພະລັງງານອັນສໍາຄັນຂອງພວກເຂົາ, ຊຶ່ງເຮັດໃຫ້ພຽງແຕ່ເປືອກເປົ່າຂອງຊີວິດອັນມີຊີວິດຂອງນາງໃນອະດີດ. ຈິດວິນຍານຂອງຜູ້ເຄາະຮ້າຍທີ່ໂຊກຮ້າຍເຫຼົ່ານີ້, ປະຈຸບັນໄດ້ປ່ຽນເປັນ <em>yūrei</em>, ຖືກຕັດສິນລົງໂທດຕໍ່ການເດີນທາງທີ່ບໍ່ມີທີ່ສິ້ນສຸດ. ທໍລະມານໂດຍຄວາມປາຖະຫນາທີ່ບໍ່ສາມາດຕ້ານທານໄດ້ທີ່ຈະເຫັນ Komayō ອີກເທື່ອຫນຶ່ງແລະຄວາມຫວັງທີ່ຈະເຮັດສໍາເລັດເກມ ōgi ຂອງພວກເຂົາທີ່ຍັງບໍ່ທັນສໍາເລັດ, ພວກເຂົາຍ່າງໄປຕະຫຼອດໄປໃນສະພາບຂອງຄວາມປາຖະຫນາທີ່ບໍ່ໄດ້ບັນລຸແລະຄວາມເສຍໃຈທີ່ບໍ່ສໍາເລັດ.</p>
 
-  <footer>
-    <h2>ຄວາມປາຖະຫນາແລະການທໍາລາຍ</h2>
-    <p>ດັ່ງນັ້ນ Komayō embodies ອັນຕະລາຍຂອງ <em>temptation</em> ແລະຄວາມຕາຍຂອງ <em>uncontrolled ຄວາມປາຖະຫນາ</em>. <a href="https://amzn.eu/d/7w6vHjX" rel="sponsored" target="_blank">ເລື່ອງລາວຂອງຜູ້ຖືກເຄາະຮ້າຍ</a> ເປັນການເຕືອນໄພຕໍ່ກັບການລໍ້ລວງຂອງຄົນທີ່ບໍ່ຮູ້ຕົວ ແລະຄົນບໍ່ສົນໃຈ. ການສະແຫວງຫາຄວາມສຸກ. ມັນ​ເປັນ​ການ​ເຕືອນ​ໄພ​ທີ່​ດັງ​ກ້ອງ​ໄປ​ທົ່ວ​ອາ​ຍຸ​ການ, ເປັນ​ການ​ເຕືອນ​ຂອງ​ເສັ້ນ​ອັນ​ດີ​ທີ່​ແຍກ​ຄວາມ​ປາ​ຖະ​ຫນາ​ຈາກ​ການ​ທໍາ​ລາຍ.</p>
-
-  </footer>
 </article>
 
     </main>
