feat: new version

--- a/index.html
+++ b/index.html
@@ -112,8 +112,10 @@
   </picture>
   <p>ຢ່າງໃດກໍຕາມ, ໃນຂະນະທີ່ເກມຍັງສືບຕໍ່, ພວກເຂົາເລີ່ມຮູ້ສຶກເມື່ອຍລ້າທີ່ຄ່ອຍໆເຂົ້າໄປໃນກະດູກຂອງພວກເຂົາ, ໃນທີ່ສຸດກໍ່ບັງຄັບໃຫ້ພວກເຂົາລົ້ມລົງດ້ວຍການນອນທີ່ບໍ່ສາມາດຫຼີກລ່ຽງໄດ້.</p>
 
-  <p>ມັນແມ່ນໃນລະຫວ່າງການນອນຫລັບນີ້ທີ່ Komayō ເປີດເຜີຍລັກສະນະທີ່ແທ້ຈິງຂອງນາງ. ນາງໄດ້ດູດເອົາພະລັງງານອັນສໍາຄັນຂອງພວກເຂົາ, ຊຶ່ງເຮັດໃຫ້ພຽງແຕ່ເປືອກເປົ່າຂອງຊີວິດອັນມີຊີວິດຂອງນາງໃນອະດີດ. ຈິດວິນຍານຂອງຜູ້ເຄາະຮ້າຍທີ່ໂຊກຮ້າຍເຫຼົ່ານີ້, ປະຈຸບັນໄດ້ປ່ຽນເປັນ <em>yūrei</em>, ຖືກຕັດສິນລົງໂທດຕໍ່ການເດີນທາງທີ່ບໍ່ມີທີ່ສິ້ນສຸດ. ທໍລະມານໂດຍຄວາມປາຖະຫນາທີ່ບໍ່ສາມາດຕ້ານທານໄດ້ທີ່ຈະເຫັນ Komayō ອີກເທື່ອຫນຶ່ງແລະຄວາມຫວັງທີ່ຈະເຮັດສໍາເລັດເກມ ōgi ຂອງພວກເຂົາທີ່ຍັງບໍ່ທັນສໍາເລັດ, ພວກເຂົາຍ່າງໄປຕະຫຼອດໄປໃນສະພາບຂອງຄວາມປາຖະຫນາທີ່ບໍ່ໄດ້ບັນລຸແລະຄວາມເສຍໃຈທີ່ບໍ່ສໍາເລັດ.</p>
+  <footer>
+    <p>ມັນແມ່ນໃນລະຫວ່າງການນອນຫລັບນີ້ທີ່ Komayō ເປີດເຜີຍລັກສະນະທີ່ແທ້ຈິງຂອງນາງ. ນາງໄດ້ດູດເອົາພະລັງງານອັນສໍາຄັນຂອງພວກເຂົາ, ຊຶ່ງເຮັດໃຫ້ພຽງແຕ່ເປືອກເປົ່າຂອງຊີວິດອັນມີຊີວິດຂອງນາງໃນອະດີດ. ຈິດວິນຍານຂອງຜູ້ເຄາະຮ້າຍທີ່ໂຊກຮ້າຍເຫຼົ່ານີ້, ປະຈຸບັນໄດ້ປ່ຽນເປັນ <em>yūrei</em>, ຖືກຕັດສິນລົງໂທດຕໍ່ການເດີນທາງທີ່ບໍ່ມີທີ່ສິ້ນສຸດ. ທໍລະມານໂດຍຄວາມປາຖະຫນາທີ່ບໍ່ສາມາດຕ້ານທານໄດ້ທີ່ຈະເຫັນ Komayō ອີກເທື່ອຫນຶ່ງແລະຄວາມຫວັງທີ່ຈະເຮັດສໍາເລັດເກມ ōgi ຂອງພວກເຂົາທີ່ຍັງບໍ່ທັນສໍາເລັດ, ພວກເຂົາຍ່າງໄປຕະຫຼອດໄປໃນສະພາບຂອງຄວາມປາຖະຫນາທີ່ບໍ່ໄດ້ບັນລຸແລະຄວາມເສຍໃຈທີ່ບໍ່ສໍາເລັດ.</p>
 
+  </footer>
 </article>
 
     </main>
