feat: new version

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <title>ເກມ ໂຊກິ ຂອງ ມານ ໄດ້</title>
     <meta charset="UTF-8">
-    <link rel="manifest" href="manifest.json">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ Komayō, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
     <meta name="keywords" content="ເລື່ອງຜີ, ໂຄມາໂຢ, obake, ōgi, ໂຊກິ, yōkai, yūrei">
@@ -42,16 +41,11 @@
       <link rel="alternate" hreflang="vi" href="https://vi.komayo.page/">
       <link rel="alternate" hreflang="zh" href="https://zh.komayo.page/">
     <link rel="canonical" href="https://lo.komayo.page/">
-    <meta name="application-name" content="ໂຄມາໂຢ">
     <link rel="icon" type="image/svg+xml" sizes="any" href="favicon.svg">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#fff">
-    <meta name="theme-color" content="#fff">
     <meta name="robots" content="index, follow">
-    <link rel="stylesheet" href="css/pico.classless.min.css">
+    <link rel="stylesheet" href="css/all.css" media="all">
+    <link rel="stylesheet" href="css/screen.css" media="screen">
+    <link rel="stylesheet" href="css/print.css" media="print">
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -69,54 +63,49 @@
         "keywords": "ເລື່ອງຜີ, ໂຄມາໂຢ, obake, ōgi, ໂຊກິ, yōkai, yūrei"
       }
     </script>
-    <style>
-      p {
-        text-align: justify;
-      }
-    </style>
   </head>
   <body>
-    <main>
-      <nav>
-  <ul>
-      <li><strong><ruby lang="ja">駒妖<rt lang="lo">ໂຄມາໂຢ</rt></ruby></strong></li>
-  </ul>
-  <ul>
-    <li><a href="#" aria-current="page">ນິທານຕົວເມືອງ</a></li>
-  </ul>
-</nav>
-<article>
+    <article>
   <header>
-    <h1>ເກມ ໂຊກິ ຂອງ ມານ ໄດ້</h1>
+    <h1>
+      <img
+        src="komayo.svg"
+        alt="Komayō"
+        title="ໂຄມາໂຢ">
+    </h1>
+
+    <h2>
+      ນິທານຕົວເມືອງ
+    </h2>
+
     <p>ມີ​ການ​ເວົ້າ​ວ່າ​ໃນ​ປະ​ເທດ​ຍີ່​ປຸ່ນ​, ໃນ​ພາກ​ພື້ນ Kansai​, ໃນ​ເວ​ລາ​ທີ່​ພຣະ​ຈັນ​ເຕັມ​ດວງ​ສ່ອງ​ສູງ​ໃນ​ທ້ອງ​ຟ້າ​, <strong>ມີ​ສັດ​ທີ່​ມີ​ສະ​ເໜ່​ທີ່​ມີ​ສະ​ເໜ່</strong> ໄດ້​ປະກົດ​ຂຶ້ນ​ເພື່ອ​ດຶງ​ດູດ​ຜູ້​ທີ່​ຫຼົງ​ທາງ​ໄປ​ມາ.</p>
 
   </header>
+
   <p>ງາມແລະລຶກລັບ, <em>Komayō ຊັກຈູງຜູ້ໂຊກຮ້າຍ</em>ດ້ວຍການລໍ້ລວງທີ່ບໍ່ສາມາດຕ້ານທານໄດ້. ຈາກນັ້ນ ນາງໄດ້ສະເໜີເກມ <dfn title="ເກມຂອງກະສັດ">ōgi</dfn> ໃຫ້ເຂົາເຈົ້າ, ເຊິ່ງເປັນ<em title="ໂຊກິ">ໝາກຮຸກພື້ນເມືອງຂອງຍີ່ປຸ່ນ</em>. ຜູ້​ທີ່​ຍອມ​ຮັບ​ຄຳ​ເຊື້ອ​ເຊີນ​ຂອງ​ນາງ​ບໍ່​ດົນ​ກໍ​ເຫັນ​ວ່າ​ຕົນ​ເອງ​ຕົກ​ຢູ່​ໃນ​ການ​ຫຼິ້ນ​ທີ່​ໜ້າ​ຕື່ນ​ເຕັ້ນ.</p>
+
 
   <picture>
     <source type="image/webp" srcset="komayo-nyim-hai-sadtu-nonlab.webp">
     <source type="image/png" srcset="komayo-nyim-hai-sadtu-nonlab.png">
+
     <img
-      alt="Komayō, yōkai, ແມ່ນສະແດງໃຫ້ເຫັນໃນລະຫວ່າງການເກມຂອງōgi. ຢູ່ຂ້າງຂອງນາງ, ຜູ້ເຄາະຮ້າຍທີ່ຫມົດກໍາລັງຂອງນາງສາມາດເຫັນໄດ້."
       src="komayo-nyim-hai-sadtu-nonlab.png"
+      alt="Komayō, yōkai, ແມ່ນສະແດງໃຫ້ເຫັນໃນລະຫວ່າງການເກມຂອງōgi. ຢູ່ຂ້າງຂອງນາງ, ຜູ້ເຄາະຮ້າຍທີ່ຫມົດກໍາລັງຂອງນາງສາມາດເຫັນໄດ້."
+      title="ເກມອອກີຂອງກອມຢໍ່ທີ່ມີຫວ່າງລູກ ແລະການນອນທີ່ບໍ່ສາມາດປ້ອງກັນໄດ້"
       height="1024"
-      width="1024" />
+      width="1024">
   </picture>
+
   <p>ຢ່າງໃດກໍຕາມ, ໃນຂະນະທີ່ເກມຍັງສືບຕໍ່, ພວກເຂົາເລີ່ມຮູ້ສຶກເມື່ອຍລ້າທີ່ຄ່ອຍໆເຂົ້າໄປໃນກະດູກຂອງພວກເຂົາ, ໃນທີ່ສຸດກໍ່ບັງຄັບໃຫ້ພວກເຂົາລົ້ມລົງດ້ວຍການນອນທີ່ບໍ່ສາມາດຫຼີກລ່ຽງໄດ້.</p>
 
+
   <footer>
-      <p>ມັນແມ່ນໃນລະຫວ່າງການນອນຫລັບນີ້ທີ່ Komayō ເປີດເຜີຍລັກສະນະທີ່ແທ້ຈິງຂອງນາງ. ນາງໄດ້ດູດເອົາພະລັງງານອັນສໍາຄັນຂອງພວກເຂົາ, ຊຶ່ງເຮັດໃຫ້ພຽງແຕ່ເປືອກເປົ່າຂອງຊີວິດອັນມີຊີວິດຂອງນາງໃນອະດີດ. ຈິດວິນຍານຂອງຜູ້ເຄາະຮ້າຍທີ່ໂຊກຮ້າຍເຫຼົ່ານີ້, ປະຈຸບັນໄດ້ປ່ຽນເປັນ <em>yūrei</em>, ຖືກຕັດສິນລົງໂທດຕໍ່ການເດີນທາງທີ່ບໍ່ມີທີ່ສິ້ນສຸດ. ທໍລະມານໂດຍຄວາມປາຖະຫນາທີ່ບໍ່ສາມາດຕ້ານທານໄດ້ທີ່ຈະເຫັນ Komayō ອີກເທື່ອຫນຶ່ງແລະຄວາມຫວັງທີ່ຈະເຮັດສໍາເລັດເກມ ōgi ຂອງພວກເຂົາທີ່ຍັງບໍ່ທັນສໍາເລັດ, ພວກເຂົາຍ່າງໄປຕະຫຼອດໄປໃນສະພາບຂອງຄວາມປາຖະຫນາທີ່ບໍ່ໄດ້ບັນລຸແລະຄວາມເສຍໃຈທີ່ບໍ່ສໍາເລັດ.</p>
+    <p>ມັນແມ່ນໃນລະຫວ່າງການນອນຫລັບນີ້ທີ່ Komayō ເປີດເຜີຍລັກສະນະທີ່ແທ້ຈິງຂອງນາງ. ນາງໄດ້ດູດເອົາພະລັງງານອັນສໍາຄັນຂອງພວກເຂົາ, ຊຶ່ງເຮັດໃຫ້ພຽງແຕ່ເປືອກເປົ່າຂອງຊີວິດອັນມີຊີວິດຂອງນາງໃນອະດີດ. ຈິດວິນຍານຂອງຜູ້ເຄາະຮ້າຍທີ່ໂຊກຮ້າຍເຫຼົ່ານີ້, ປະຈຸບັນໄດ້ປ່ຽນເປັນ <em>yūrei</em>, ຖືກຕັດສິນລົງໂທດຕໍ່ການເດີນທາງທີ່ບໍ່ມີທີ່ສິ້ນສຸດ. ທໍລະມານໂດຍຄວາມປາຖະຫນາທີ່ບໍ່ສາມາດຕ້ານທານໄດ້ທີ່ຈະເຫັນ Komayō ອີກເທື່ອຫນຶ່ງແລະຄວາມຫວັງທີ່ຈະເຮັດສໍາເລັດເກມ ōgi ຂອງພວກເຂົາທີ່ຍັງບໍ່ທັນສໍາເລັດ, ພວກເຂົາຍ່າງໄປຕະຫຼອດໄປໃນສະພາບຂອງຄວາມປາຖະຫນາທີ່ບໍ່ໄດ້ບັນລຸແລະຄວາມເສຍໃຈທີ່ບໍ່ສໍາເລັດ.</p>
 
-    </footer>
-  </article>
 
-    </main>
-    <script>
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', function() {
-          navigator.serviceWorker.register('service-worker.js');
-        });
-      }
-    </script>
+  </footer>
+</article>
+
   </body>
 </html>
