--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="lo" dir="ltr" itemscope itemtype="http://schema.org/Article">
+<html lang="lo" dir="ltr" itemscope itemtype="https://schema.org/ShortStory">
   <head>
     <title>ເກມ ໂຊກິ ຂອງ ມານ ໄດ້</title>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
     <meta name="description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ Komayō, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
     <meta name="keywords" content="ເລື່ອງຜີ, ໂຄມາໂຢ, obake, ōgi, ໂຊກິ, yōkai, yūrei">
     <meta property="og:title" content="ເກມ ໂຊກິ ຂອງ ມານ ໄດ້">
-    <meta property="og:type" content="article">
+    <meta property="og:type" content="book">
     <meta property="og:url" content="https://lo.komayo.page/">
     <meta property="og:image" content="https://lo.komayo.page/komayo-nyim-hai-sadtu-nonlab.webp">
     <meta property="og:description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ Komayō, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
