feat: new version

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <title>ເກມ ໂຊກິ ຂອງ ມານ ໄດ້</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ Komayō, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
-    <meta name="keywords" content="ເລື່ອງຜີ, ໂຄມາໂຢ, obake, ōgi, ໂຊກິ, yōkai, yūrei">
+    <meta name="description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ ກອມຍອ, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
+    <meta name="keywords" content="ເລື່ອງຜີ, ກອມຍອ, obake, ōgi, ໂຊກິ, yōkai, yūrei">
     <meta property="og:title" content="ເກມ ໂຊກິ ຂອງ ມານ ໄດ້">
     <meta property="og:type" content="book">
     <meta property="og:url" content="https://lo.komayo.page/">
     <meta property="og:image" content="https://lo.komayo.page/komayo-nyim-hai-sadtu-nonlab.webp">
-    <meta property="og:description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ Komayō, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
+    <meta property="og:description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ ກອມຍອ, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
     <meta itemprop="name" content="ເກມ ໂຊກິ ຂອງ ມານ ໄດ້">
-    <meta itemprop="description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ Komayō, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
+    <meta itemprop="description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ ກອມຍອ, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
     <meta itemprop="image" content="https://lo.komayo.page/komayo-nyim-hai-sadtu-nonlab.webp">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="ເກມ ໂຊກິ ຂອງ ມານ ໄດ້">
-    <meta name="twitter:description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ Komayō, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
+    <meta name="twitter:description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ ກອມຍອ, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
     <meta name="twitter:image" content="https://lo.komayo.page/komayo-nyim-hai-sadtu-nonlab.webp">
       <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/">
       <link rel="alternate" hreflang="en" href="https://en.komayo.page/">
@@ -56,11 +56,11 @@
         },
         "inLanguage": "lo",
         "headline": "ເກມ ໂຊກິ ຂອງ ມານ ໄດ້",
-        "description": "ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ Komayō, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.",
+        "description": "ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ ກອມຍອ, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.",
         "image": "https://lo.komayo.page/komayo-nyim-hai-sadtu-nonlab.webp",
         "datePublished": "2023-06-26",
         "dateModified": "2023-06-26",
-        "keywords": "ເລື່ອງຜີ, ໂຄມາໂຢ, obake, ōgi, ໂຊກິ, yōkai, yūrei"
+        "keywords": "ເລື່ອງຜີ, ກອມຍອ, obake, ōgi, ໂຊກິ, yōkai, yūrei"
       }
     </script>
   </head>
@@ -71,7 +71,7 @@
       <img
         src="komayo.svg"
         alt="Komayō"
-        title="ໂຄມາໂຢ">
+        title="ກອມຍອ">
     </h1>
 
     <h2>
@@ -82,7 +82,7 @@
 
   </header>
 
-  <p>ງາມແລະລຶກລັບ, <em>Komayō ຊັກຈູງຜູ້ໂຊກຮ້າຍ</em>ດ້ວຍການລໍ້ລວງທີ່ບໍ່ສາມາດຕ້ານທານໄດ້. ຈາກນັ້ນ ນາງໄດ້ສະເໜີເກມ <dfn title="ເກມຂອງກະສັດ">ōgi</dfn> ໃຫ້ເຂົາເຈົ້າ, ເຊິ່ງເປັນ<em title="ໂຊກິ">ໝາກຮຸກພື້ນເມືອງຂອງຍີ່ປຸ່ນ</em>. ຜູ້​ທີ່​ຍອມ​ຮັບ​ຄຳ​ເຊື້ອ​ເຊີນ​ຂອງ​ນາງ​ບໍ່​ດົນ​ກໍ​ເຫັນ​ວ່າ​ຕົນ​ເອງ​ຕົກ​ຢູ່​ໃນ​ການ​ຫຼິ້ນ​ທີ່​ໜ້າ​ຕື່ນ​ເຕັ້ນ.</p>
+  <p>ງາມແລະລຶກລັບ, <em>ກອມຍອ ຊັກຈູງຜູ້ໂຊກຮ້າຍ</em>ດ້ວຍການລໍ້ລວງທີ່ບໍ່ສາມາດຕ້ານທານໄດ້. ຈາກນັ້ນ ນາງໄດ້ສະເໜີເກມ <dfn title="ເກມຂອງກະສັດ">ōgi</dfn> ໃຫ້ເຂົາເຈົ້າ, ເຊິ່ງເປັນ<em title="ໂຊກິ">ໝາກຮຸກພື້ນເມືອງຂອງຍີ່ປຸ່ນ</em>. ຜູ້​ທີ່​ຍອມ​ຮັບ​ຄຳ​ເຊື້ອ​ເຊີນ​ຂອງ​ນາງ​ບໍ່​ດົນ​ກໍ​ເຫັນ​ວ່າ​ຕົນ​ເອງ​ຕົກ​ຢູ່​ໃນ​ການ​ຫຼິ້ນ​ທີ່​ໜ້າ​ຕື່ນ​ເຕັ້ນ.</p>
 
 
   <picture>
@@ -91,7 +91,7 @@
 
     <img
       src="komayo-nyim-hai-sadtu-nonlab.png"
-      alt="Komayō, yōkai, ແມ່ນສະແດງໃຫ້ເຫັນໃນລະຫວ່າງການເກມຂອງōgi. ຢູ່ຂ້າງຂອງນາງ, ຜູ້ເຄາະຮ້າຍທີ່ຫມົດກໍາລັງຂອງນາງສາມາດເຫັນໄດ້."
+      alt="ກອມຍອ, yōkai, ແມ່ນສະແດງໃຫ້ເຫັນໃນລະຫວ່າງການເກມຂອງōgi. ຢູ່ຂ້າງຂອງນາງ, ຜູ້ເຄາະຮ້າຍທີ່ຫມົດກໍາລັງຂອງນາງສາມາດເຫັນໄດ້."
       title="ເກມອອກີຂອງກອມຢໍ່ທີ່ມີຫວ່າງລູກ ແລະການນອນທີ່ບໍ່ສາມາດປ້ອງກັນໄດ້"
       height="1024"
       width="1024">
@@ -101,7 +101,7 @@
 
 
   <footer>
-    <p>ມັນແມ່ນໃນລະຫວ່າງການນອນຫລັບນີ້ທີ່ Komayō ເປີດເຜີຍລັກສະນະທີ່ແທ້ຈິງຂອງນາງ. ນາງໄດ້ດູດເອົາພະລັງງານອັນສໍາຄັນຂອງພວກເຂົາ, ຊຶ່ງເຮັດໃຫ້ພຽງແຕ່ເປືອກເປົ່າຂອງຊີວິດອັນມີຊີວິດຂອງນາງໃນອະດີດ. ຈິດວິນຍານຂອງຜູ້ເຄາະຮ້າຍທີ່ໂຊກຮ້າຍເຫຼົ່ານີ້, ປະຈຸບັນໄດ້ປ່ຽນເປັນ <em>yūrei</em>, ຖືກຕັດສິນລົງໂທດຕໍ່ການເດີນທາງທີ່ບໍ່ມີທີ່ສິ້ນສຸດ. ທໍລະມານໂດຍຄວາມປາຖະຫນາທີ່ບໍ່ສາມາດຕ້ານທານໄດ້ທີ່ຈະເຫັນ Komayō ອີກເທື່ອຫນຶ່ງແລະຄວາມຫວັງທີ່ຈະເຮັດສໍາເລັດເກມ ōgi ຂອງພວກເຂົາທີ່ຍັງບໍ່ທັນສໍາເລັດ, ພວກເຂົາຍ່າງໄປຕະຫຼອດໄປໃນສະພາບຂອງຄວາມປາຖະຫນາທີ່ບໍ່ໄດ້ບັນລຸແລະຄວາມເສຍໃຈທີ່ບໍ່ສໍາເລັດ.</p>
+    <p>ມັນແມ່ນໃນລະຫວ່າງການນອນຫລັບນີ້ທີ່ ກອມຍອ ເປີດເຜີຍລັກສະນະທີ່ແທ້ຈິງຂອງນາງ. ນາງໄດ້ດູດເອົາພະລັງງານອັນສໍາຄັນຂອງພວກເຂົາ, ຊຶ່ງເຮັດໃຫ້ພຽງແຕ່ເປືອກເປົ່າຂອງຊີວິດອັນມີຊີວິດຂອງນາງໃນອະດີດ. ຈິດວິນຍານຂອງຜູ້ເຄາະຮ້າຍທີ່ໂຊກຮ້າຍເຫຼົ່ານີ້, ປະຈຸບັນໄດ້ປ່ຽນເປັນ <em>yūrei</em>, ຖືກຕັດສິນລົງໂທດຕໍ່ການເດີນທາງທີ່ບໍ່ມີທີ່ສິ້ນສຸດ. ທໍລະມານໂດຍຄວາມປາຖະຫນາທີ່ບໍ່ສາມາດຕ້ານທານໄດ້ທີ່ຈະເຫັນ ກອມຍອ ອີກເທື່ອຫນຶ່ງແລະຄວາມຫວັງທີ່ຈະເຮັດສໍາເລັດເກມ ōgi ຂອງພວກເຂົາທີ່ຍັງບໍ່ທັນສໍາເລັດ, ພວກເຂົາຍ່າງໄປຕະຫຼອດໄປໃນສະພາບຂອງຄວາມປາຖະຫນາທີ່ບໍ່ໄດ້ບັນລຸແລະຄວາມເສຍໃຈທີ່ບໍ່ສໍາເລັດ.</p>
 
 
   </footer>
