feat: new version

--- a/index.html
+++ b/index.html
@@ -64,19 +64,28 @@
       }
     </script>
   </head>
+
   <body>
-    <article>
-  <header>
-    <h1>
+    <header>
       <img
         src="komayo.svg"
         alt="Komayō"
         title="ກອມຍອ">
-    </h1>
+    </header>
 
-    <h2>
+    <nav>
+      <ul>
+        <li><a href="https://lo.komayo.page/">ນິທານຕົວເມືອງ</a></li>
+
+
+      </ul>
+    </nav>
+
+    <article>
+  <header>
+    <h1>
       ນິທານຕົວເມືອງ
-    </h2>
+    </h1>
 
     <p>ມີ​ການ​ເວົ້າ​ວ່າ​ໃນ​ປະ​ເທດ​ຍີ່​ປຸ່ນ​, ໃນ​ພາກ​ພື້ນ Kansai​, ໃນ​ເວ​ລາ​ທີ່​ພຣະ​ຈັນ​ເຕັມ​ດວງ​ສ່ອງ​ສູງ​ໃນ​ທ້ອງ​ຟ້າ​, <strong>ມີ​ສັດ​ທີ່​ມີ​ສະ​ເໜ່​ທີ່​ມີ​ສະ​ເໜ່</strong> ໄດ້​ປະກົດ​ຂຶ້ນ​ເພື່ອ​ດຶງ​ດູດ​ຜູ້​ທີ່​ຫຼົງ​ທາງ​ໄປ​ມາ.</p>
 
@@ -107,5 +116,9 @@
   </footer>
 </article>
 
+
+    <footer>
+      &copy; 2023 Cyril Veltin
+    </footer>
   </body>
 </html>
