--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="lo" dir="ltr" itemscope itemtype="https://schema.org/ShortStory">
   <head>
     <title>ເກມ ໂຊກິ ຂອງ ມານ ໄດ້</title>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ ກອມຍອ, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
     <meta name="keywords" content="ເລື່ອງຜີ, ກອມຍອ, obake, ōgi, ໂຊກິ, yōkai, yūrei">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Cyril Veltin">
     <meta property="og:title" content="ເກມ ໂຊກິ ຂອງ ມານ ໄດ້">
     <meta property="og:type" content="book">
     <meta property="og:url" content="https://lo.komayo.page/">
@@ -18,6 +21,7 @@
     <meta name="twitter:title" content="ເກມ ໂຊກິ ຂອງ ມານ ໄດ້">
     <meta name="twitter:description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ ກອມຍອ, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
     <meta name="twitter:image" content="https://lo.komayo.page/komayo-nyim-hai-sadtu-nonlab.webp">
+
       <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/">
       <link rel="alternate" hreflang="en" href="https://en.komayo.page/">
       <link rel="alternate" hreflang="fa" href="https://fa.komayo.page/">
@@ -42,10 +46,18 @@
       <link rel="alternate" hreflang="zh" href="https://zh.komayo.page/">
     <link rel="canonical" href="https://lo.komayo.page/">
     <link rel="icon" type="image/svg+xml" sizes="any" href="favicon.svg">
-    <meta name="robots" content="index, follow">
+
+    <style media="screen">
+      :root {
+        --article-title-text-color: #f6cfe9;
+        --article-title-shadow-color: #58354d;
+      }
+    </style>
+
     <link rel="stylesheet" href="css/all.css" media="all">
-    <link rel="stylesheet" href="css/screen.css" media="screen">
     <link rel="stylesheet" href="css/print.css" media="print">
+    <link rel="stylesheet" href="css/screen.css" media="screen">
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -72,6 +84,13 @@
         alt="Komayō"
         title="ກອມຍອ">
     </header>
+
+    <nav>
+      <a href="recits/rencontre-au-bar-de-la-regence/"><img src="recits/rencontre-au-bar-de-la-regence/favicon.svg" alt="Episode 1" title="Rencontre au Bar de la Régence"></a>
+      <a href="recits/l-orgueil-ou-l-ame-du-champion/"><img src="recits/l-orgueil-ou-l-ame-du-champion/favicon.svg" alt="Episode 2" title="L'orgueil ou l'âme du Champion"></a>
+      <a href="recits/l-amour-sous-les-cerisiers/"><img src="recits/l-amour-sous-les-cerisiers/favicon.svg" alt="Episode 3" title="L'Amour sous les cerisiers"></a>
+      <a href="recits/le-souffle-du-renard/"><img src="recits/le-souffle-du-renard/favicon.svg" alt="Episode 4" title="Le Souffle du Renard"></a>
+    </nav>
 
     <article>
   <h1>
