feat: new version

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <meta property="og:title" content="ເກມ ໂຊກິ ຂອງ ມານ ໄດ້">
     <meta property="og:type" content="book">
     <meta property="og:url" content="https://lo.komayo.page/">
-    <meta property="og:image" content="https://lo.komayo.page/komayo-nyim-hai-sadtu-nonlab.webp">
+    <meta property="og:image" content="https://lo.komayo.page/img/komayo-nyim-hai-sadtu-nonlab.webp">
     <meta property="og:description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ ກອມຍອ, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
     <meta itemprop="name" content="ເກມ ໂຊກິ ຂອງ ມານ ໄດ້">
     <meta itemprop="description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ ກອມຍອ, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
-    <meta itemprop="image" content="https://lo.komayo.page/komayo-nyim-hai-sadtu-nonlab.webp">
+    <meta itemprop="image" content="https://lo.komayo.page/img/komayo-nyim-hai-sadtu-nonlab.webp">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="ເກມ ໂຊກິ ຂອງ ມານ ໄດ້">
     <meta name="twitter:description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ ກອມຍອ, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
-    <meta name="twitter:image" content="https://lo.komayo.page/komayo-nyim-hai-sadtu-nonlab.webp">
+    <meta name="twitter:image" content="https://lo.komayo.page/img/komayo-nyim-hai-sadtu-nonlab.webp">
 
       <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/">
       <link rel="alternate" hreflang="en" href="https://en.komayo.page/">
@@ -88,7 +88,7 @@
         "inLanguage": "lo",
         "headline": "ເກມ ໂຊກິ ຂອງ ມານ ໄດ້",
         "description": "ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ ກອມຍອ, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.",
-        "image": "https://lo.komayo.page/komayo-nyim-hai-sadtu-nonlab.webp",
+        "image": "https://lo.komayo.page/img/komayo-nyim-hai-sadtu-nonlab.webp",
         "datePublished": "2023-06-26",
         "dateModified": "2023-06-26",
         "keywords": "ເລື່ອງຜີ, ກອມຍອ, obake, ōgi, ໂຊກິ, yōkai, yūrei"
@@ -119,11 +119,13 @@
 
 
   <picture>
-    <source type="image/webp" srcset="komayo-nyim-hai-sadtu-nonlab.webp">
-    <source type="image/png" srcset="komayo-nyim-hai-sadtu-nonlab.png">
+    <source type="image/webp" srcset="img/komayo-nyim-hai-sadtu-nonlab.webp">
+    <source type="image/png" srcset="img/komayo-nyim-hai-sadtu-nonlab.png">
 
     <img
-      src="komayo-nyim-hai-sadtu-nonlab.png"
+      decoding="async"
+      loading="lazy"
+      src="img/komayo-nyim-hai-sadtu-nonlab.png"
       alt="ກອມຍອ, yōkai, ແມ່ນສະແດງໃຫ້ເຫັນໃນລະຫວ່າງການເກມຂອງōgi. ຢູ່ຂ້າງຂອງນາງ, ຜູ້ເຄາະຮ້າຍທີ່ຫມົດກໍາລັງຂອງນາງສາມາດເຫັນໄດ້."
       title="ເກມອອກີຂອງກອມຢໍ່ທີ່ມີຫວ່າງລູກ ແລະການນອນທີ່ບໍ່ສາມາດປ້ອງກັນໄດ້"
       height="1024"
