feat: new version

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <meta property="og:title" content="ເກມ ໂຊກິ ຂອງ ມານ ໄດ້">
     <meta property="og:type" content="book">
     <meta property="og:url" content="https://lo.komayo.page/">
-    <meta property="og:image" content="https://lo.komayo.page/img/komayo-nyim-hai-sadtu-nonlab.webp">
+    <meta property="og:image" content="https://lo.komayo.page/img/komayo-nyim-hai-sadtu-nonlab-large.webp">
     <meta property="og:description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ ກອມຍອ, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
     <meta itemprop="name" content="ເກມ ໂຊກິ ຂອງ ມານ ໄດ້">
     <meta itemprop="description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ ກອມຍອ, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
-    <meta itemprop="image" content="https://lo.komayo.page/img/komayo-nyim-hai-sadtu-nonlab.webp">
+    <meta itemprop="image" content="https://lo.komayo.page/img/komayo-nyim-hai-sadtu-nonlab-large.webp">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="ເກມ ໂຊກິ ຂອງ ມານ ໄດ້">
     <meta name="twitter:description" content="ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ ກອມຍອ, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.">
-    <meta name="twitter:image" content="https://lo.komayo.page/img/komayo-nyim-hai-sadtu-nonlab.webp">
+    <meta name="twitter:image" content="https://lo.komayo.page/img/komayo-nyim-hai-sadtu-nonlab-large.webp">
 
       <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/">
       <link rel="alternate" hreflang="en" href="https://en.komayo.page/">
@@ -88,7 +88,7 @@
         "inLanguage": "lo",
         "headline": "ເກມ ໂຊກິ ຂອງ ມານ ໄດ້",
         "description": "ໃນຄວາມລຶກລັບຂອງວົງເດືອນເຕັມ, ຄົ້ນພົບເລື່ອງຂອງ ກອມຍອ, yōkai bewitching ຈາກນິທານພື້ນເມືອງຂອງຍີ່ປຸ່ນ. ທີ່ເໜັງຕີງ ແລະ ຕາຍໄປ, ນາງຊັກຈູງຈິດວິນຍານທີ່ຫຼົງໄຫຼເຂົ້າໄປໃນເກມໂອຈີ, ດູດເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ເຮັດໃຫ້ພວກເຂົາຕົກຢູ່ໃນຄວາມທຸກທໍລະມານນິລັນດອນ. ມັນ​ເປັນ​ເລື່ອງ​ຂອງ​ການ​ດຶງ​ດູດ​ຄວາມ​ຕາຍ​ແລະ​ຄວາມ​ປາ​ຖະ​ຫນາ​ທີ່​ບໍ່​ມີ​ການ​ກວດ​ສອບ, ເປັນ​ການ​ເຕືອນ​ໄພ​ອັນ​ຕະ​ລາຍ​ຂອງ​ການ​ລໍ້​ລວງ.",
-        "image": "https://lo.komayo.page/img/komayo-nyim-hai-sadtu-nonlab.webp",
+        "image": "https://lo.komayo.page/img/komayo-nyim-hai-sadtu-nonlab-large.webp",
         "datePublished": "2023-06-26",
         "dateModified": "2023-06-26",
         "keywords": "ເລື່ອງຜີ, ກອມຍອ, obake, ōgi, ໂຊກິ, yōkai, yūrei"
@@ -103,10 +103,11 @@
         <img
           src="komayo-dark.svg"
           alt="Komayō"
-          title="ກອມຍອ">
+          title="ກອມຍອ"
+          height="22.599"
+          width="92.595">
       </picture>
     </header>
-
 
     <article>
   <h1>
@@ -119,13 +120,11 @@
 
 
   <picture>
-    <source type="image/webp" srcset="img/komayo-nyim-hai-sadtu-nonlab.webp">
-    <source type="image/png" srcset="img/komayo-nyim-hai-sadtu-nonlab.png">
+    <source type="image/webp" srcset="img/komayo-nyim-hai-sadtu-nonlab-small.webp" media="(max-width: 512px)" height="512" width="512">
+    <source type="image/webp" srcset="img/komayo-nyim-hai-sadtu-nonlab-large.webp" media="(min-width: 512px)" height="1024" width="1024">
 
     <img
-      decoding="async"
-      loading="lazy"
-      src="img/komayo-nyim-hai-sadtu-nonlab.png"
+      src="img/komayo-nyim-hai-sadtu-nonlab-fallback.png"
       alt="ກອມຍອ, yōkai, ແມ່ນສະແດງໃຫ້ເຫັນໃນລະຫວ່າງການເກມຂອງōgi. ຢູ່ຂ້າງຂອງນາງ, ຜູ້ເຄາະຮ້າຍທີ່ຫມົດກໍາລັງຂອງນາງສາມາດເຫັນໄດ້."
       title="ເກມອອກີຂອງກອມຢໍ່ທີ່ມີຫວ່າງລູກ ແລະການນອນທີ່ບໍ່ສາມາດປ້ອງກັນໄດ້"
       height="1024"
@@ -139,6 +138,7 @@
 
 
 </article>
+
 
   </body>
 </html>
