feat: new version

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 
     <img
       src="img/komayo-1024x1024.jpg"
-      alt="Komayō"
-      title="ກອມຍອ"
+      alt="ກອມຍອ, yōkai, ແມ່ນສະແດງໃຫ້ເຫັນໃນລະຫວ່າງການເກມຂອງōgi. ຢູ່ຂ້າງຂອງນາງ, ຜູ້ເຄາະຮ້າຍທີ່ຫມົດກໍາລັງຂອງນາງສາມາດເຫັນໄດ້."
+      title="ເກມອອກີຂອງກອມຢໍ່ທີ່ມີຫວ່າງລູກ ແລະການນອນທີ່ບໍ່ສາມາດປ້ອງກັນໄດ້"
       height="1024"
       width="1024">
   </picture>
